# kaggle

./: .gitignore  LICENSE
amex-default-prediction/R/: amex-default-prediction.R
canada_wildfires/: Makefile  README.md  pyproject.toml
canada_wildfires/assets/: canada.pq
canada_wildfires/conf/: config.yaml
canada_wildfires/notebooks/: ca_wildfires.ipynb  scratch.ipynb
canada_wildfires/src/canada_wildfires/: __init__.py  data.py
house-prices-advanced-regression-techniques/R/: house-prices-advanced-regression-techniques.R
hurricanes/: Hurricanes and Typhoons, 1851-2014.ipynb  hurricanes.R
hurricanes/.ipynb_checkpoints/: Hurricanes and Typhoons, 1851-2014-checkpoint.ipynb
hurricanes/R/: hurricanes.R
hurricanes/notebooks/: hurricanes.ipynb
talkingdata-adtracking-fraud-detection/src/: talkingdata-adtracking-fraud-detection.ipynb
